--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
+    <!-- Bootstrap links start -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-
+    <!-- Bootstrap links end -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -26,7 +27,9 @@
       </div>
     </div>
     <div class="container d-flex justify-content-center align-items-center">
+      <!-- calculator body -->
       <div class="calculator card mt-5">
+        <!-- screen -->
         <div class="col-12 display">
           <input
             type="text"
@@ -43,6 +46,7 @@
             disabled
           />
         </div>
+        <!-- calculator keys -->
         <div class="calculator-keys">
           <button type="button" class="operator btn" value="+">+</button>
           <button type="button" class="operator btn" value="-">-</button>
@@ -166,7 +170,9 @@
         </div>
       </div>
     </div>
+    <!-- keys end -->
 
+    <!-- toggle button -->
     <div style="position: fixed; top: 10px; right: 5px">
       <button class="btn" onclick="toggleTheme()">toggle</button>
     </div>
